v1.15.4: release build and version bump